# VehicleMotionPrediction

./: .gitignore  Dockerfile  Pipfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: center_trace.pkl  final_data.pkl  left_trace.pkl  race_trace.pkl  right_trace.pkl  test_data.pkl  train_data.pkl
data/track_config/: spielberg_lanes.csv
experiments/approaches/: Results Visualization.html  Results.ipynb  RobustnessResults-Copy1.ipynb  RobustnessResults.ipynb  ValidationDistributions.ipynb  dataset_plotting.ipynb  environment.yml  experiment_runner.py  toy-problem-bicycle.py  toy-problem-model-error.py  toy-problem-robustness.py  toy_problem_library.py
experiments/data_generation/: __init__.py  data_processing.ipynb
experiments/notebooks/: argoverse-exploration.ipynb
notebooks/: Evaluated Gradient.ipynb  Symbolic Gradient.ipynb
src/approaches/: Digraph.gv  basic_bicycle-tensorboard-Copy1.ipynb  basic_bicycle-tensorboard.ipynb  basic_bicycle.ipynb  basic_bicycle_batched.ipynb  basic_learning_curve.txt  best_simple_bicycle.pt  best_simple_bicycle_2.pt  best_simple_bicycle_frenet.pt  distributed_models_argoverse-Copy1.ipynb  plotting.ipynb  stepped_bicycle.ipynb  stepped_learning_curve.txt  toy-problem-bicycle-Copy1.ipynb  toy-problem-bicycle.py  toy-problem-cicycle-stats.ipynb  toy-problem-robustness-bicycle.ipynb  toy-problem-robustness.py
src/data_generation/: data_processing.ipynb
src/vmp/: VehicleMotionPrediction.code-workspace  data_utils.py  losses.py  networks.py  utils.py  viz_utils.py
(+23 files in other folders)
