[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vmp"
authors = [
    {name = "Nandan Tumu", email="nandan.t@live.com"},
]

description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = []
license = {text = "All Rights Reserved"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src", "data"]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = []  # empty by default

[tool.setuptools.package-data]
"vmp.data" = ["*"]
"vmp.data.track_config" = ["*"]